[package]
name = "typecheck-ts-bench"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
diagnostics = { path = "../../diagnostics" }
hir-js = { path = "../../hir-js" }
parse-js = { path = "../../parse-js" }
semantic-js = { path = "../../semantic-js" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typecheck-ts = { path = "../../typecheck-ts" }
types-ts = { path = "../../types-ts" }

[[bench]]
name = "pipeline"
harness = false
