[package]
name = "typecheck-ts-bench"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
diagnostics = { workspace = true }
hir-js = { workspace = true }
parse-js = { workspace = true }
semantic-js = { workspace = true }
serde = { workspace = true }
typecheck-ts = { workspace = true }
types-ts-interned = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "body_alloc"
harness = false

[[bench]]
name = "check_body_alloc"
harness = false
